# entity

./: .env.example  README.md  pyproject.toml
entity_backend/: manage.py
entity_backend/entity_backend/: asgi.py  settings.py  urls.py  wsgi.py
